--- a/navi1.html
+++ b/navi1.html
@@ -81,13 +81,6 @@
             }
         }
     </style>
-    <script>
-        
-        function toggleMenu() {
-            var navbar = document.querySelector('.navbar');
-            navbar.classList.toggle('active');
-        }
-    </script>
 </head>
 <body>
 <ul class="navbar">
@@ -97,7 +90,7 @@
         <a href="#">About</a>
         <a href="#">Services</a>
     </li>
-    <li><a class="navbar-menu-icon" onclick="toggleMenu()">&#9776;</a></li>
+    <li><a class="navbar-menu-icon" >&#9776;</a></li>
 </ul>
 
 </body>
